# equalishcoind

./: .gitignore  Makefile.am  README.md  configure.ac  equalishcoin-fork-50-50-plan.md  equalishcoin-pogolo-stratum-v1-integration-audit.md  next-step.md  public-web-presence-services.md  sonar-project.properties
contrib/: .env  Dockerfile.nogui  docker-compose.yml  docker-entrypoint.sh  gitian-build.py  peercoin-cli.bash-completion  peercoin-tx.bash-completion  peercoind.bash-completion
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-netbsd.md  build-openbsd.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  init.md  managing-wallets.md  reduce-traffic.md  shared-libraries.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  equalishcoin-cli.1  equalishcoin-qt.1  equalishcoin-tx.1  equalishcoin-util.1  equalishcoin-wallet.1  equalishcoind.1
docs/: chain-params.md  docker-compose.yml  fork-notes.md  launch-plan.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bignum.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chain.cpp  chain.h  chainparamsbase.cpp  clientversion.cpp  clientversion.h  init.cpp  kernel.cpp  kernel.h  kernelrecord.h  net.h  pow.cpp  protocol.h  serialize.h  txdb.cpp  validation.cpp  (+2 more)
(+121 files in other folders)
